2003-08-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/BaseDoc.py: New base clase for TextDoc/DrawDoc combination
	* src/docgen/OpenOffice.py: Derive from BaseDoc instead of TextDoc

2003-08-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.py: catch missing textdomain in gtk.glade for
	older versions of pygtk
	* src/po/template.po: update
	* src/plugins/GraphViz.py: Allow truetype or postscript fonts

2003-08-19  Tim Waugh  <twaugh@redhat.com>
	* src/docgen/OpenDrawDoc.py: Fixed escaping.

2003-08-19  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (build_backhistmenu,build_fwdhistmenu): 
	Add a limit of 20 for the Back/Forward history popup menus. 
	Add hotkeys for these menus; 
	(change_active_person): Fix sensitivity of Back/Forward buttons; 
	(build_people_context_menu): Add new items to the People View's context 
	menu (Home and Add Bookmark);
	(change_alpha_page): Fix context menu upon changing pages. 

2003-08-18  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/preferences.glade: Provide hotkeys for the new default view 
	options. 
	* src/gramps_main.py: Enable context menus with back and forward
	portions of history upon right-clicking on Back and Forward buttons.
	Enable context menu upon right-click in the People View with Back,
	Forward, Add, Remove, and Edit items. 
	* src/gramps.glade: Add handlers for the context menus. 

2003-08-17  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py: Better behavior for the history menu.

2003-08-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py: Functional history submenu of the Go menu.

2003-08-16  Don Allingham  <dallingham@users.sourceforge.net>
	* configure.in: removal of intl.c/intl22.so
	* src/gramps.py: handling of i18n without the use of intl
	* src/*.py: switch from intl to gettext

2003-08-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: New tool icon